--- a/Test/ivy-resolution/resolved-com.99bill-bankSimlator-working@NJ23H6B92-PC.properties
+++ b/Test/ivy-resolution/resolved-com.99bill-bankSimlator-working@NJ23H6B92-PC.properties
@@ -1,5 +1,5 @@
 #com.99bill#bankSimlator;working@NJ23H6B92-PC resolved revisions
-#Mon Aug 07 17:46:15 CST 2017
+#Wed Aug 09 13:43:18 CST 2017
 +organisation\:\#@\#\:+org.easymock\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+easymock\:\#@\#\:+revision\:\#@\#\:+2.3\:\#@\#\:=2.3 release 2.3 null
 +organisation\:\#@\#\:+j2ee\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+persistence-api\:\#@\#\:+revision\:\#@\#\:+1.0\:\#@\#\:=1.0 release 1.0 null
 +organisation\:\#@\#\:+com.javanet\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+stax-utils\:\#@\#\:+revision\:\#@\#\:+20040917\:\#@\#\:=20040917 release 20040917 null
@@ -11,6 +11,7 @@
 +organisation\:\#@\#\:+org.codehaus\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+xfire-ws-security\:\#@\#\:+revision\:\#@\#\:+1.2.6\:\#@\#\:=1.2.6 release 1.2.6 null
 +organisation\:\#@\#\:+org.apache\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+commons-net\:\#@\#\:+revision\:\#@\#\:+1.4.1\:\#@\#\:=1.4.1 release 1.4.1 null
 +organisation\:\#@\#\:+org.apache.commons\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+commons-jci-eclipse\:\#@\#\:+revision\:\#@\#\:+3.2.0.666\:\#@\#\:=3.2.0.666 release 3.2.0.666 null
++organisation\:\#@\#\:+org.apache\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+httpcore\:\#@\#\:+revision\:\#@\#\:+4.3.3\:\#@\#\:=4.3.3 release 4.0-beta3 null
 +organisation\:\#@\#\:+com.openrules\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+tools\:\#@\#\:+revision\:\#@\#\:+5.4.1\:\#@\#\:=5.4.1 release 5.4.1 null
 +organisation\:\#@\#\:+org.apache.jakarta.commons\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+commons-jci-core\:\#@\#\:+revision\:\#@\#\:+1.0-406301\:\#@\#\:=1.0-406301 release 1.0-406301 null
 +organisation\:\#@\#\:+org.springframework\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+spring-flex\:\#@\#\:+revision\:\#@\#\:+1.0.0.M1\:\#@\#\:=1.0.0.M1 release 1.0.0.M1 null
@@ -185,6 +186,7 @@
 +organisation\:\#@\#\:+com.thoughtworks\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+xstream\:\#@\#\:+revision\:\#@\#\:+1.3\:\#@\#\:=1.3 release 1.3 null
 +organisation\:\#@\#\:+org.springframework\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+spring-test\:\#@\#\:+revision\:\#@\#\:+3.0.2.RELEASE\:\#@\#\:=3.0.2.RELEASE release 3.0.2.RELEASE null
 +organisation\:\#@\#\:+org.codehaus.xfire\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+xfire-generator\:\#@\#\:+revision\:\#@\#\:+1.2.6\:\#@\#\:=1.2.6 release 1.2.6 null
++organisation\:\#@\#\:+org.apache\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+httpclient\:\#@\#\:+revision\:\#@\#\:+4.3.6\:\#@\#\:=4.3.6 release 4.3.6 null
 +organisation\:\#@\#\:+org.slf4j\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+slf4j-api\:\#@\#\:+revision\:\#@\#\:+1.7.7\:\#@\#\:=1.7.7 release 1.7.7 null
 +organisation\:\#@\#\:+com.99bill\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+cpspe-inf\:\#@\#\:+revision\:\#@\#\:+4.5.2\:\#@\#\:=4.5.2 release 4.5.2 null
 +organisation\:\#@\#\:+org.apache\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+XmlSchema\:\#@\#\:+revision\:\#@\#\:+1.1\:\#@\#\:=1.1 release 1.1 null
@@ -229,6 +231,6 @@
 +organisation\:\#@\#\:+org.apache\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+commons-cli\:\#@\#\:+revision\:\#@\#\:+1.1\:\#@\#\:=1.1 release 1.1 null
 +organisation\:\#@\#\:+unknown\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+bcprov-jdk15\:\#@\#\:+revision\:\#@\#\:+140\:\#@\#\:=140 release 140 null
 +organisation\:\#@\#\:+org.apache\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+commons-logging\:\#@\#\:+revision\:\#@\#\:+1.2\:\#@\#\:=1.2 release 1.2 null
-+organisation\:\#@\#\:+org.apache\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+commons-fileupload\:\#@\#\:+revision\:\#@\#\:+1.2.1\:\#@\#\:=1.2.1 release 1.2.1 null
 +organisation\:\#@\#\:+org.apache\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+wss4j\:\#@\#\:+revision\:\#@\#\:+1.5.1\:\#@\#\:=1.5.1 release 1.5.1 null
++organisation\:\#@\#\:+org.apache\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+commons-fileupload\:\#@\#\:+revision\:\#@\#\:+1.2.1\:\#@\#\:=1.2.1 release 1.2.1 null
 +organisation\:\#@\#\:+sonic\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+sonic_Crypto\:\#@\#\:+revision\:\#@\#\:+1.0\:\#@\#\:=1.0 release 1.0 null
