--- a/Test/ivy-resolution/resolved-com.99bill-bankSimlator-working@NJ23H6B92-PC.properties
+++ b/Test/ivy-resolution/resolved-com.99bill-bankSimlator-working@NJ23H6B92-PC.properties
@@ -1,5 +1,5 @@
 #com.99bill#bankSimlator;working@NJ23H6B92-PC resolved revisions
-#Wed Aug 09 13:43:18 CST 2017
+#Mon Aug 21 11:16:47 CST 2017
 +organisation\:\#@\#\:+org.easymock\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+easymock\:\#@\#\:+revision\:\#@\#\:+2.3\:\#@\#\:=2.3 release 2.3 null
 +organisation\:\#@\#\:+j2ee\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+persistence-api\:\#@\#\:+revision\:\#@\#\:+1.0\:\#@\#\:=1.0 release 1.0 null
 +organisation\:\#@\#\:+com.javanet\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+stax-utils\:\#@\#\:+revision\:\#@\#\:+20040917\:\#@\#\:=20040917 release 20040917 null
@@ -24,6 +24,7 @@
 +organisation\:\#@\#\:+org.codehaus.xfire\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+xfire-java5\:\#@\#\:+revision\:\#@\#\:+1.2.6\:\#@\#\:=1.2.6 release 1.2.6 null
 +organisation\:\#@\#\:+bank\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+bank-icbc-tools\:\#@\#\:+revision\:\#@\#\:+2.0\:\#@\#\:=2.0 release 2.0 null
 +organisation\:\#@\#\:+com.google\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+guava\:\#@\#\:+revision\:\#@\#\:+19.0\:\#@\#\:=19.0 release 19.0 null
++organisation\:\#@\#\:+com.squareup.okio\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+okio\:\#@\#\:+revision\:\#@\#\:+1.8.0\:\#@\#\:=1.8.0 release 1.8.0 null
 +organisation\:\#@\#\:+net.sf\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+swarmcache\:\#@\#\:+revision\:\#@\#\:+1.0RC2\:\#@\#\:=1.0RC2 release 1.0RC2 null
 +organisation\:\#@\#\:+org.ognl\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+ognl\:\#@\#\:+revision\:\#@\#\:+3.0\:\#@\#\:=3.0 release 3.0 null
 +organisation\:\#@\#\:+com.99bill\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+bgw-common\:\#@\#\:+revision\:\#@\#\:+2.0.0.0.2\:\#@\#\:=2.0.0.0.2 integration 2.0.0.0.2 null
@@ -141,7 +142,6 @@
 +organisation\:\#@\#\:+org.objectweb\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+asm\:\#@\#\:+revision\:\#@\#\:+1.5.3\:\#@\#\:=1.5.3 release 1.5.3 null
 +organisation\:\#@\#\:+org.codehaus\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+xfire-jsr181-api\:\#@\#\:+revision\:\#@\#\:+1.0-M1\:\#@\#\:=1.0-M1 release 1.0-M1 null
 +organisation\:\#@\#\:+j2ee\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+stax-api\:\#@\#\:+revision\:\#@\#\:+1.0.1\:\#@\#\:=1.0.1 release 1.0.1 null
-+organisation\:\#@\#\:+org.jboss\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+netty\:\#@\#\:+revision\:\#@\#\:+3.2.7.Final\:\#@\#\:=3.2.7.Final release 3.2.7.Final null
 +organisation\:\#@\#\:+org.apache\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+commons-httpclient\:\#@\#\:+revision\:\#@\#\:+3.1\:\#@\#\:=3.1 release 3.1 null
 +organisation\:\#@\#\:+com.99bill\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+vmtw\:\#@\#\:+revision\:\#@\#\:+4.1.5\:\#@\#\:=4.1.5 release 4.1.5 null
 +organisation\:\#@\#\:+com.99bill\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+if-util\:\#@\#\:+revision\:\#@\#\:+2.1.0\:\#@\#\:=2.1.0 release 2.1.0 null
@@ -199,6 +199,7 @@
 +organisation\:\#@\#\:+antlr\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+antlr\:\#@\#\:+revision\:\#@\#\:+2.7.6\:\#@\#\:=2.7.6 release 2.7.6 null
 +organisation\:\#@\#\:+com.99bill\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+cfs-security-hsm\:\#@\#\:+revision\:\#@\#\:+10.0.0.2\:\#@\#\:=10.0.0.2 integration 10.0.0.2 null
 +organisation\:\#@\#\:+com.szfs\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+tws-adapter\:\#@\#\:+revision\:\#@\#\:+2.0\:\#@\#\:=2.0 release 2.0 null
++organisation\:\#@\#\:+com.squareup.okhttp\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+okhttp\:\#@\#\:+revision\:\#@\#\:+3.3.1\:\#@\#\:=3.3.1 release 3.3.1 null
 +organisation\:\#@\#\:+citicbank\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+bcprov-jdk14-145.jar\:\#@\#\:+revision\:\#@\#\:+1.1\:\#@\#\:=1.1 release 1.1 null
 +organisation\:\#@\#\:+com.bocbj\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+bcpg-jdk15on\:\#@\#\:+revision\:\#@\#\:+1.48\:\#@\#\:=1.48 release 1.48 null
 +organisation\:\#@\#\:+joda-time\:\#@\#\:+branch\:\#@\#\:+@\#\:NULL\:\#@\:\#@\#\:+module\:\#@\#\:+joda-time\:\#@\#\:+revision\:\#@\#\:+2.8.2\:\#@\#\:=2.8.2 release 2.8.2 null
